<resources>
    <string name="app_name">iSENSE Data Collector</string>
    <string name="experiments_no_items">No experiments were found.</string>
    <string name="prompt">Would you like to retry uploading any of the following?</string>
	<string name="syncTime">
	    Synchronizing time is useful when using multiple devices on a ride at the
	    same time.  By default, many Android devices\' clocks will not match one
	    another\'s, thus making recording data at similar times difficult.  However,
	    you have a choice to fix this issue by setting a device as a \"host\".
	    This can be done by hitting the \"Send\" button.  Upon hitting \"Send\", 
	    the time from that particular Android device will be broadcasted as a timeframe
	    that all other phones in the local network can receive.  However, in order for
	    a phone to receive a broadcasted time, that phone must be currently in 
	    receive-mode, which can be done by hitting \"Receive\".  In other words, if
	    you intend on receiving a host\'s time, you must be in receive-mode before the
	    host hits \"Send\". (By default, \"Send\" will also receive the time that you have 
	    broadcasted, should you be the host).  After pressing either \"Send\" or 
	    \"Receive\", a dialog box will tell you the time that has been received from
	    the host, along with the millisecond offset between 
	    the received time and your Android device\'s actual clock.  If you do choose 
	    to synchronize time, recording data will now use the received time as a label 
	    for data points, rather than using your local time.  This now allows 
	    simultaneous data recording across multiple devices on the same ride at the 
	    same time.  Please note: synchronizing time will only work if all the Android
	    devices are connected to the same WiFi network.  Mobile plans (e.g. 3G or 4G)
	    generally will not allow for synchronizing time.  Also, synchronizing time may not be
	    allowed on some WiFi networks, but it generally works on small, password-secured 
	    WiFi networks.
	</string>
	<string name="search">Search</string>
	<string name="startString">START\n(Press and Hold)</string>
	<string name="stopString">STOP\n(Press and Hold)</string>
	<string name="notLoggedIn">Username: NOT LOGGED IN</string>
	<string name="session">Session Name: NOT SET</string>
	<string name="iSENSELogo">iSENSE Logo</string>
	<string name="picAndVidCount">Pictures/Videos For This Session: \0</string>
	<string name="menuDirections">Use Menu to Access Configurations</string>
	<string name="timeElapsed">Time Elapsed: 0:00</string>
	<string name="sessionName">Session Name: </string>
	<string name="experimentNum">Experiment #: </string>
	<string name="browse">  Browse&#8230;  </string>
	<string name="takePic">Take Picture</string>
	<string name="takeVid">Take Video"</string>
	<string name="instructions"><u>Instructions:</u></string>
	<string name="send">Send</string>
	<string name="receive">Receive</string>
	<string name="cancel">Cancel</string>
	<string name="okay">Okay</string>
	<string name="back">Back</string>
	<string name="upload">Upload</string>
	<string name="media_desc">Select one of the following options:</string>
	<string name="scan_qr">Scan QR Code</string>
    <string name="username">Username:    \0</string>
	<string name="password">Password:    \0</string>
	<string name="loading">Loading&#x2026;</string>
	<string name="uploadString">Would you like to upload your data and media to iSENSE?</string>
	<string name="no_isense">
	    You are either not logged into iSENSE, or you have not provided a valid Experiment ID to upload your data to.
		You will be returned to the main screen, but you may go to Menu -> Upload to upload this data set once you log in
		to iSENSE and provide a valid Experiment ID.  You are permitted to continue recording data; however if
		you choose to do so, you will not be able to upload the previous data set to iSENSE afterwards.
	</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="gpsString">Enabling GPS satellites is recommended for this application.  Would you like to enable GPS?</string>
	<string name="force_stop">You exited the app while data was still being recorded.  Data has stopped recording.</string>
	<string name="recording_stopped_text">
	    You have recorded 3,000 data points.  For the sake of memory, we have capped this as the maximum
	    amount of data points to be recorded at one time and have stopped recording for you.  Press \"Okay\" to continue.  
	</string>
	<string name="description_hint">Enter Description Here&#8230;</string>
	<string name="description_prompt">
	    Enter a session description (or leave blank if you\'d like an automatically generated description).
	</string>
	<string name="visit">Visit</string>
	<string name="qr_prompt">
	    Your device does not have the proper Barcode Scanner application installed
		to use this feature.  However, you may visit the Google Play store to download 
		this application (\"Barcode Scanner\" by the Zxing Team).
	</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="done">Done</string>
	<string name="timeFailed">Failed to synchronize time.  You may try again.</string>
	<string name="retry">Try Again</string>
	<string name="sample_rate">Sample Interval: </string>
	<string name="welcome">Welcome</string>
	<string name="cont">Continue</string>
	<string name="exit">Exit</string>
	<string name="to">To</string>
	<string name="about">A\nb\no\nu\nt</string>
	<string name="guide">G\nu\ni\nd\ne</string>
	<string name="login">Login</string>
</resources>