<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/description_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/description_prompt"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:imeOptions="actionDone"
            android:maxLength="150" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/description_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/description_upload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/upload"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>