<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashground"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/abstract_layout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:background="@drawable/black_white_circle"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:singleLine="true"
            android:text="@string/welcome"
            android:textColor="#CCCCCC"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:text="@string/to"
            android:textColor="#CCCCCC"
            android:textSize="20dp" />
    </LinearLayout>

    <edu.uml.cs.isense.collector.objects.FontFitTextView
        android:id="@+id/title_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/splash_about"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/buttons_sync_time"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"
        android:text="@string/about" />
    
     <Button
        android:id="@+id/splash_how_to"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttons_sync_time"
        android:textColor="@android:color/white"
        android:layout_marginRight="5dp"
        android:text="@string/guide" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="10dp" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/eula_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splash_buttons"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingLeft="5dp" >

        <CheckBox
            android:id="@+id/eula_check"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/eula_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/eula_check"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/splash_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="30dp" >

        <Button
            android:id="@+id/splash_continue"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_continue"
            android:text="@string/cont"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/splash_exit"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_exit"
            android:text="@string/exit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>