<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:scrollbarThumbVertical="@drawable/grey_scroll" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent" >

        <TextView
            android:id="@+id/no_gps_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/gpsString"
            android:textSize="18dp"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent" >

            <Button
                android:id="@+id/no_gps_yes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/no_gps_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/no"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>